major content change

--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -76,7 +76,7 @@ div.left-align{
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #f05b62;
+  color: #5499C7;  /* #f05b62*/
   font-family: "Gotham-Round", Impact, sans-serif;
   font-weight: 300;
   line-height: 0.9em;
