--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -143,20 +143,20 @@ div.left-align{
  *********************************************/
 .reveal .controls div.navigate-left,
 .reveal .controls div.navigate-left.enabled {
-  border-right-color:  #f05b62; }
+  border-right-color:  #5499C7; }
 
 
 .reveal .controls div.navigate-right,
 .reveal .controls div.navigate-right.enabled {
-  border-left-color:  #f05b62; }
+  border-left-color:  #5499C7; }
 
 .reveal .controls div.navigate-up,
 .reveal .controls div.navigate-up.enabled {
-  border-bottom-color:  #f05b62; }
+  border-bottom-color:  #5499C7; }
 
 .reveal .controls div.navigate-down,
 .reveal .controls div.navigate-down.enabled {
-  border-top-color:  #f05b62; }
+  border-top-color:  #5499C7; }
 
 .reveal .controls div.navigate-left.enabled:hover {
   border-right-color: #53555C; }
@@ -177,7 +177,7 @@ div.left-align{
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background:  #f05b62;
+  background:  #5499C7;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
